--- a/config.ini
+++ b/config.ini
@@ -6,15 +6,15 @@ password = czsh@dOw2
 
 
 [wb_mail_content]
-from_email = it@gel.co.th
+from_email = gelmaster@gel.co.th
 from_name = GEL webmaster
-to_email = chardchai@gel.co.th
+to_email = ir@gel.co.th
 to_name = GEL IA
 subject = Whistle Blowing
 
 [ir_mail_content]
-from_email = it@gel.co.th
+from_email = gelmaster@gel.co.th
 from_name = GEL webmaster
-to_email = chardchai@gel.co.th
+to_email = ir@gel.co.th
 to_name = GEL IA
 subject = Information Request
